Fix font sizes on small screens

--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -19,6 +19,12 @@
     &-king, &-review, &-partners
       padding: 8% 0
 
+  //king
+  .s-king
+    p
+      margin: 15px 0
+      font-size: 16px
+
 
 // ≥992px
 +media-breakpoint-down(md)
@@ -28,6 +34,9 @@
 
   .header-contacts
     font-size: 14px
+
+
+
 
 // ≥768px
 +media-breakpoint-down(sm)
@@ -45,6 +54,7 @@
 
 // ≥576px
 +media-breakpoint-down(xs)
+  //header
   .flex-center
     .container
       padding-right: 85px
@@ -63,6 +73,7 @@
 
   .fotorama__nav
     display: none
+
 
 
 
